--- a/FileManager/ru.lproj/Main.strings
+++ b/FileManager/ru.lproj/Main.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UIButton"; normalTitle = "Read file"; ObjectID = "4LW-cI-h9z"; */
-"4LW-cI-h9z.normalTitle" = "Чтение файла";
+"4LW-cI-h9z.normalTitle" = "Прочитать файл";
 
 /* Class = "UIView"; accessibilityHint = "View A"; ObjectID = "8Ob-Nl-UxE"; */
 "8Ob-Nl-UxE.accessibilityHint" = "View A";
@@ -9,7 +9,7 @@
 "8Ob-Nl-UxE.accessibilityLabel" = "View A";
 
 /* Class = "UILabel"; text = "Enter Some text here:"; ObjectID = "CkQ-36-Yya"; */
-"CkQ-36-Yya.text" = "Наберите здесь текст:";
+"CkQ-36-Yya.text" = "Введите сюда текст:";
 
 /* Class = "UIButton"; normalTitle = "Delete file"; ObjectID = "L1j-hW-LRu"; */
 "L1j-hW-LRu.normalTitle" = "Удалить файл";
@@ -21,10 +21,10 @@
 "PVp-tH-94L.title" = "Главный экран";
 
 /* Class = "UILabel"; text = "File has content:"; ObjectID = "UEL-Sa-zZ0"; */
-"UEL-Sa-zZ0.text" = "Содержание файла:";
+"UEL-Sa-zZ0.text" = "Содержимое файла:";
 
 /* Class = "UIViewController"; title = "File Manager"; ObjectID = "WXo-We-JTV"; */
-"WXo-We-JTV.title" = "Менеджер файлов";
+"WXo-We-JTV.title" = "Файловый менеджер";
 
 /* Class = "UIButton"; normalTitle = "View directory"; ObjectID = "tZT-GA-04J"; */
-"tZT-GA-04J.normalTitle" = "Содержание директории";
+"tZT-GA-04J.normalTitle" = "Просмотреть директорию";
